[workspace.package]
name = "probe-rs-deprecated-binaries"
version = "1.0.0"
edition = "2021"
description = "Deprecated binaries for the probe-rs project."
documentation = "https://docs.rs/probe-rs/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[workspace]
members = ["cargo-embed", "cargo-flash", "probe-rs-debugger", "probe-rs-cli"]
